@@ -2,12 +2,11 @@ package core.bomb.modules.s.souvenir;
 
 import core.bomb.Widget;
 import org.javatuples.Pair;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-
-import static java.util.stream.Collectors.toList;
 
 public class Souvenir extends Widget {
     private static final Map<String, String> MODULE_ARTIFACTS;
@@ -20,11 +19,11 @@ public class Souvenir extends Widget {
         MODULE_ARTIFACTS.put(key, answer);
     }
 
-    public static List<Pair<String, String>> getPuzzleArtifacts() {
+    public static @NotNull List<Pair<String, String>> getPuzzleArtifacts() {
         return MODULE_ARTIFACTS.entrySet()
                 .stream()
                 .map(entry -> new Pair<>(entry.getKey(), entry.getValue()))
-                .collect(toList());
+                .toList();
     }
 
     public static void reset() {
